2006-02-08  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-PictureMate.xml,
	  printer/Epson-PictureMate_Deluxe.xml,
	  printer/Epson-Stylus_C44.xml, printer/Epson-Stylus_C20.xml,
	  printer/Epson-Stylus_C40.xml, printer/Epson-Stylus_C41.xml,
	  printer/Epson-Stylus_C42.xml, printer/Epson-Stylus_C44SX.xml,
	  printer/Epson-Stylus_C43UX.xml, printer/Epson-Stylus_C43SX.xml,
	  printer/Epson-Stylus_C43.xml, printer/Epson-Stylus_C45.xml,
	  printer/Epson-Stylus_C48.xml, printer/Epson-Stylus_C68.xml,
	  printer/Epson-Stylus_C85.xml, printer/Epson-Stylus_C65.xml,
	  printer/Epson-Stylus_C88.xml, printer/Epson-Stylus_CX3100.xml,
	  printer/Epson-Stylus_CX1500.xml,
	  printer/Epson-Stylus_CX3500.xml,
	  printer/Epson-Stylus_CX3600.xml,
	  printer/Epson-Stylus_CX3650.xml,
	  printer/Epson-Stylus_CX4100.xml,
	  printer/Epson-Stylus_CX4200.xml,
	  printer/Epson-Stylus_CX4500.xml,
	  printer/Epson-Stylus_CX4600.xml,
	  printer/Epson-Stylus_CX4700.xml,
	  printer/Epson-Stylus_CX4800.xml,
	  printer/Epson-Stylus_CX7700.xml,
	  printer/Epson-Stylus_CX7800.xml,
	  printer/Epson-Stylus_DX4200.xml,
	  printer/Epson-Stylus_DX4250.xml,
	  printer/Epson-Stylus_DX4800.xml: Added new Epson inkjet
	  printers.

2006-02-05  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/gutenprint.xml: Driver XML file for new Gutenprint driver
	  package.

	* driver/gimp-print.xml: Corrected version number.

	* driver/stp.xml, opt/16.xml, opt/18.xml, opt/19.xml, opt/20.xml,
	  opt/21.xml, opt/24.xml, opt/31.xml, opt/32.xml, opt/33.xml,
	  opt/34.xml, opt/35.xml, opt/36.xml, opt/37.xml, opt/38.xml,
	  opt/39.xml, opt/40.xml, opt/41.xml, opt/52.xml: Removed old
	  Gimp-Print "stp" driver.

	* driver/pcl3.xml: Removed link to "stp" driver entry.

2006-02-02  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-Color_LaserJet_5500.xml,
	  printer/HP-LaserJet_1200.xml: Corrected links to the
	  manufacturer-supplied PPD files.

2006-01-26 Shiyun Yie <hplip@hp.com>