@@ -108,6 +108,20 @@
   </printer>
   <printer>
    <id>printer/HP-DeskJet_520</id><!-- HP DeskJet 520 -->
+   <margins>
+    <general>
+     <unit>pt</unit>
+     <relative />
+     <left>18</left>
+     <right>18</right>
+     <top>9</top>
+     <bottom>48</bottom>
+    </general>
+    <exception PageSize="A4">
+     <left>10</left>
+     <right>10</right>
+    </exception>
+   </margins>
   </printer>
   <printer>
    <id>printer/HP-OfficeJet</id>
