@@ -465,6 +465,12 @@
      </constraint>
      <constraint sense="false">
       <make>HP</make>
+      <model>DeskJet 520</model>
+      <driver>pcl3</driver>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
       <model>DeskJet 820C</model>
       <driver>pnm2ppa</driver>
       <arg_defval>na</arg_defval>
@@ -689,6 +695,12 @@
     <constraints>
      <constraint sense="false">
       <driver>ml85p</driver>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>DeskJet 520</model>
+      <driver>pcl3</driver>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
