@@ -46,6 +46,14 @@
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
     <ev_driverval>2</ev_driverval>
+    <constraints>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>DeskJet 520</model>
+      <driver>pcl3</driver>
+      <arg_defval>na</arg_defval>
+     </constraint>
+    </constraints>
    </enum_val>
    <enum_val id="ev/1042">
     <ev_longname>
@@ -103,6 +111,14 @@
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
     <ev_driverval>-1</ev_driverval>
+    <constraints>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>DeskJet 520</model>
+      <driver>pcl3</driver>
+      <arg_defval>na</arg_defval>
+     </constraint>
+    </constraints>
    </enum_val>
   </enum_vals>
 </option>
