@@ -19,6 +19,11 @@
       <driver>pcl3</driver>
       <arg_defval>ev/1071</arg_defval>
      </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>DeskJet 520</model>
+      <driver>pcl3</driver>
+     </constraint>
   </constraints>
   <enum_vals>
    <enum_val id="ev/1051">
