@@ -2,7 +2,7 @@
   <!-- A multilingual <comments> block can appear here, too;
        it should be treated as documentation for the user. -->
   <arg_longname>
-   <en>Ink Drying Time (sec, 0 = printer default)</en>
+   <en>Ink Drying Time (s)</en>
   </arg_longname>
   <arg_shortname>
    <en>DryTime</en><!-- backends only know <en> shortnames! -->
@@ -20,22 +20,22 @@
       <printer>printer/HP-DeskJet_510</printer>
       <arg_defval>0</arg_defval>
      </constraint>
-     <constraint sense="true">
+     <constraint sense="false">
       <driver>pcl3</driver>
       <printer>printer/HP-DeskJet_520</printer>
       <arg_defval>0</arg_defval>
      </constraint>
-     <constraint sense="true">
+     <constraint sense="false">
       <driver>pcl3</driver>
       <printer>printer/HP-DeskJet_540C</printer>
       <arg_defval>0</arg_defval>
      </constraint>
-     <constraint sense="true">
+     <constraint sense="false">
       <driver>pcl3</driver>
       <printer>printer/HP-DeskJet_550C</printer>
       <arg_defval>0</arg_defval>
      </constraint>
-     <constraint sense="true">
+     <constraint sense="false">
       <driver>pcl3</driver>
       <printer>printer/HP-DeskJet_560C</printer>
       <arg_defval>0</arg_defval>
