@@ -12,7 +12,7 @@
    <arg_order>220</arg_order>
    <arg_spot>A</arg_spot>
    <arg_substitution />
-   <arg_proto> -dRasterGraphicsQuality=%s</arg_proto>
+   <arg_proto>%s</arg_proto>
   </arg_execution>
   <constraints>
      <constraint sense="true">
@@ -167,6 +167,19 @@
      </constraint>
   </constraints>
   <enum_vals>
+   <enum_val id="ev/rgqcp">
+    <ev_longname>
+     <en>Use printer control panel setting</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>ControlPanel</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval> -dRasterGraphicsQuality=0</ev_driverval>
+   </enum_val>
    <enum_val id="ev/1063">
     <ev_longname>
      <en>Draft</en>
@@ -178,7 +191,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>1</ev_driverval>
+    <ev_driverval> -dRasterGraphicsQuality=1</ev_driverval>
    </enum_val>
    <enum_val id="ev/1064">
     <ev_longname>
@@ -191,7 +204,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>2</ev_driverval>
+    <ev_driverval> -dRasterGraphicsQuality=2</ev_driverval>
    </enum_val>
    <enum_val id="ev/1062">
     <ev_longname>
@@ -204,7 +217,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>0</ev_driverval>
+    <ev_driverval></ev_driverval>
    </enum_val>
   </enum_vals>
 </option>
