@@ -19,6 +19,12 @@
       <driver>pcl3</driver>
       <arg_defval>0</arg_defval>
      </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>DeskJet 520</model>
+      <driver>pcl3</driver>
+      <arg_defval>0</arg_defval>
+     </constraint>
      <constraint sense="true">
       <make>HP</make>
       <model>DeskJet 940C</model>
