@@ -1,0 +1,106 @@
+<option type="enum" id="opt/pcl3-PrintoutMode-HPDJ520">
+  <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+  <arg_longname>
+   <en>Printout Mode</en>
+  </arg_longname>
+  <arg_shortname>
+   <en>PrintoutMode</en><!-- backends only know <en> shortnames! -->
+  </arg_shortname>
+  <arg_execution>
+   <arg_group>General</arg_group>
+   <arg_order>10</arg_order>
+   <arg_section>AnySetup</arg_section>
+   <arg_spot>A</arg_spot>
+   <arg_composite />
+   <!-- <arg_proto></arg_proto> -->
+  </arg_execution>
+  <constraints>
+     <constraint sense="true">
+      <make>HP</make>
+      <model>DeskJet 520</model>
+      <driver>pcl3</driver>
+      <arg_defval>ev/pcl3-PrintoutMode-PlainNormal</arg_defval>
+     </constraint>
+  </constraints>
+  <enum_vals>
+   <enum_val id="ev/pcl3-PrintoutMode-PlainDraft">
+    <ev_longname>
+     <en>Plain Paper, Draft Quality</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>PlainDraft</en>
+     <!-- Until someone tells me how to learn the user locale in
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>MediaType=Plain DryTime=Printer Quality=Draft RasterGraphicsQuality=Draft Passes=1 IntensityRendering=Halftones</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/pcl3-PrintoutMode-PlainNormal">
+    <ev_longname>
+     <en>Plain Paper, Normal Quality</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>PlainNormal</en>
+     <!-- Until someone tells me how to learn the user locale in
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>MediaType=Plain DryTime=Printer Quality=Normal RasterGraphicsQuality=High Passes=1 IntensityRendering=Halftones</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/pcl3-PrintoutMode-PlainHigh">
+    <ev_longname>
+     <en>Plain Paper, High Quality</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>PlainHigh</en>
+     <!-- Until someone tells me how to learn the user locale in
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>MediaType=Plain DryTime=Printer Quality=Presentation RasterGraphicsQuality=High Passes=2 IntensityRendering=FloydSteinberg</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/pcl3-PrintoutMode-SpecialDraft">
+    <ev_longname>
+     <en>Special Paper, Draft Quality</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>SpecialDraft</en>
+     <!-- Until someone tells me how to learn the user locale in
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>MediaType=Transparency DryTime=Printer Quality=Draft RasterGraphicsQuality=Draft Passes=2 IntensityRendering=Halftones</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/pcl3-PrintoutMode-SpecialNormal">
+    <ev_longname>
+     <en>Special Paper, Normal Quality</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>SpecialNormal</en>
+     <!-- Until someone tells me how to learn the user locale in
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>MediaType=Transparency DryTime=Printer Quality=Normal RasterGraphicsQuality=High Passes=2 IntensityRendering=Halftones</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/pcl3-PrintoutMode-SpecialHigh">
+    <ev_longname>
+     <en>Special Paper, High Quality</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>SpecialHigh</en>
+     <!-- Until someone tells me how to learn the user locale in
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>MediaType=Transparency DryTime=Printer Quality=Presentation RasterGraphicsQuality=High Passes=4 IntensityRendering=FloydSteinberg</ev_driverval>
+   </enum_val>
+  </enum_vals>
+</option>
