@@ -1,3 +1,11 @@
+2006-02-09  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* driver/pcl3.xml, opt/213.xml, opt/215.xml, opt/218.xml,
+	  opt/220.xml, opt/225.xml, opt/226.xml, opt/2.xml,
+	  opt/pcl3-PrintoutMode-HPDJ520.xml: Improved default settings for
+	  the HP DeskJet 520 (thanks to Pascal De Vuyst, pascal dot
+	  devuyst at gmail dot com).
+
 2006-02-08  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Epson-PictureMate.xml,
